build: configure cross-platform JavaFX dependencies (win, mac, linux)